language/move-lang/tests/move_check/borrows/copy_full_invalid.exp
error: 

    ┌── tests/move_check/borrows/copy_full_invalid.move:13:9 ───
    │
 13 │         x;
    │         ^ Invalid copy of local 'x'
    ·
 12 │         let f = &mut x;
    │                 ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/copy_full_invalid.move:19:9 ───
    │
 19 │         x;
    │         ^ Invalid copy of local 'x'
    ·
 18 │         let f = id_mut(&mut x);
    │                 -------------- It is still being mutably borrowed by this reference
    │

